feat: enhance background service worker with installation logging, message handling, and storage change monitoring; update manifest name to Chinese

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "VanNav",
+  "name": "VanNav插件",
   "description": "VanNav manage tool",
   "version": "3.0.1",
   "manifest_version": 3,
